beets/beets-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: beets
  name: beets
  namespace: mediaserver
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: beets
    spec:
      containers:
      - image: linuxserver/beets
        name: beets
        ports:
        - containerPort: 8337
        args:
        #- beet
        #- import
        #- /mnt
        resources: {}
        volumeMounts:
        - mountPath: /music
          name: media
        - mountPath: /mnt
          name: beets-data
        - mountPath: /downloads
          name: beets-downloads
        - mountPath: /config
          name: beets-config
      restartPolicy: Always
      volumes:
      - name: media
        nfs:
          server: 192.168.178.33
          path: "/volume1/beets"
      - name: beets-data
        nfs:
          server: 192.168.178.33
          path: "/volume1/music"
      - name: beets-downloads
        nfs:
          server: 192.168.178.33
          path: "/volume1/openflixr/music"
      - name: beets-config
        nfs:
          server: 192.168.178.33
          path: "/volume1/openflixr/beets/config"
status: {}
