beets/beets-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: beets
  name: beets
  namespace: mediaserver
spec:
  ports:
  - name: "8337"
    port: 8337
    targetPort: 8337
  selector:
    io.kompose.service: beets
status:
  loadBalancer: {}
