beets/beets-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    io.kompose.service: beets
  name: beets
  namespace: mediaserver
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: beets.internal.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: beets
          servicePort: 8337
